# coding-playground

./: .gitignore  README.md
src/GreatestCommonDivisor/: GCD.c  GCD.h
src/bubbleSort/: bubble_sort.c  bubble_sort.h
src/cryptography/: RSA_cipher.c  RSA_cipher.h  crypto_utils.c  my_crypto.h  random_num_gen_BBS.c  vernam_cipher.c  vigenere_cipher.c
src/fastModularExponent/: fast_modular_exponent.c  fast_modular_exponent.h
src/matrixMultiply/: matrix_multiply.c  matrix_multiply.h
src/memoryAllocator/: memalloc.c  memalloc.h  theory.doc
src/mergeSort/: merge_sort.c  merge_sort.h
src/roundRobin/: main.c  round_robin.c  round_robin.h
test/: CMakeCache.txt  CMakeLists.txt  GCD_test.cpp  Makefile  bubble_sort_test.cpp  cmake_install.cmake  fast_modular_exponent_tests.cpp  matrix_multiply_test.cpp  memory_allocator_tests.cpp
test/cryptography_tests/: BBS_test.cpp  RSA_test.cpp  vernam_test.cpp  vigenere_test.cpp
